Fix width alignment.

--- a/app.css
+++ b/app.css
@@ -18,7 +18,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 20px 0;
+    margin: 0 12.25%;
 }
 
 #main {
